name:                seal-tools
version:             2.0.0
synopsis:            Seal - Tools
description:         Seal - Tools
license:             MIT
license-file:        LICENSE
author:              Serokell
maintainer:          hi@serokell.io
category:            Currency
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

-- Note: for components that we don't want to build, we add both "buildable:
-- False" *and* wrap build-depends into "if !flag(for-installer)". This is
-- because stack doesn't seem to take "buildable: False" into account when
-- calculating the build plan.
Flag for-installer
  default:     False
  manual:      True

  description: Build a reduced set of components (only what is needed for the
               installer)

executable seal-genupdate
  hs-source-dirs:      src/genupdate
  main-is:             Main.hs
  build-depends:       base
                     , ansi-wl-pprint
                     , bytestring
                     , seal
                     , seal-util
                     , cryptonite
                     , neat-interpolation
                     , optparse-applicative
                     , filepath
                     , formatting
                     , process
                     , tar
                     , text
                     , universum
                     , unix-compat
  default-language:    Haskell2010
  ghc-options:         -threaded
                       -Wall
                       -O2

  -- linker speed up for linux
  if os(linux)
    ghc-options:       -optl-fuse-ld=gold
    ld-options:        -fuse-ld=gold

  default-extensions:  OverloadedStrings
                       NoImplicitPrelude
                       BangPatterns
                       ApplicativeDo
                       ScopedTypeVariables
                       MonadFailDesugaring

executable seal-keygen
  hs-source-dirs:      src/keygen
  main-is:             Main.hs
  other-modules:       KeygenOptions
                     , Dump
  if !flag(for-installer)
   build-depends:      base
                     , base58-bytestring
                     , bytestring >= 0.10
                     , canonical-json
                     , seal
                     , seal-chain
                     , seal-core
                     , seal-crypto
                     , seal-util
                     , directory
                     , filepath
                     , formatting
                     , Glob
                     , lens
                     , optparse-applicative >= 0.12
                     , serokell-util >= 0.1
                     , text
                     , universum >= 0.1
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts
                       -Wall
                       -O2

  -- linker speed up for linux
  if os(linux)
    ghc-options:       -optl-fuse-ld=gold
    ld-options:        -fuse-ld=gold

  default-extensions:   DeriveDataTypeable
                        DeriveGeneric
                        GeneralizedNewtypeDeriving
                        StandaloneDeriving
                        FlexibleContexts
                        FlexibleInstances
                        MultiParamTypeClasses
                        FunctionalDependencies
                        DefaultSignatures
                        NoImplicitPrelude
                        OverloadedStrings
                        TypeApplications
                        TupleSections
                        ViewPatterns
                        LambdaCase
                        MultiWayIf
                        ConstraintKinds
                        UndecidableInstances
                        BangPatterns
                        ScopedTypeVariables
                        MonadFailDesugaring

  if flag(for-installer)
    buildable: False
  else
    buildable: True

executable seal-addr-convert
  hs-source-dirs:      src/addr-convert
  main-is:             Main.hs
  build-depends:       base
                     , ansi-wl-pprint
                     , seal
                     , seal-core
                     , seal-crypto
                     , seal-util
                     , neat-interpolation
                     , optparse-applicative
                     , text
                     , universum
  default-language:    Haskell2010
  ghc-options:         -threaded
                       -Wall
                       -O2

  -- linker speed up for linux
  if os(linux)
    ghc-options:       -optl-fuse-ld=gold
    ld-options:        -fuse-ld=gold

  default-extensions:   DeriveDataTypeable
                        DeriveGeneric
                        GeneralizedNewtypeDeriving
                        StandaloneDeriving
                        FlexibleContexts
                        FlexibleInstances
                        MultiParamTypeClasses
                        FunctionalDependencies
                        DefaultSignatures
                        NoImplicitPrelude
                        OverloadedStrings
                        TypeApplications
                        TupleSections
                        ViewPatterns
                        LambdaCase
                        MultiWayIf
                        ConstraintKinds
                        UndecidableInstances
                        ApplicativeDo
                        ScopedTypeVariables
                        MonadFailDesugaring

executable seal-cli-docs
  hs-source-dirs:      src/cli-docs
  main-is:             Main.hs
  if !flag(for-installer)
   build-depends:      base
                     , seal
                     , directory
                     , filepath
                     , neat-interpolation
                     , optparse-applicative
                     , process
                     , text
                     , universum >= 0.1.11
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts
                       -Wall
                       -O2

  -- linker speed up for linux
  if os(linux)
    ghc-options:       -optl-fuse-ld=gold
    ld-options:        -fuse-ld=gold

  default-extensions:   NoImplicitPrelude
                        BangPatterns
                        OverloadedStrings
                        ApplicativeDo
                        ScopedTypeVariables
                        MonadFailDesugaring

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp

  if flag(for-installer)
    buildable: False

executable seal-blockchain-analyser
  hs-source-dirs:      src/blockchain-analyser
  main-is:             Main.hs
  other-modules:       Options
                       Types
                       Rendering
  if !flag(for-installer)
   build-depends:      ansi-wl-pprint
                     , base
                     , seal
                     , seal-binary
                     , seal-chain
                     , seal-core
                     , seal-crypto
                     , seal-db
                     , seal-util
                     , directory
                     , formatting
                     , lens
                     , mtl
                     , neat-interpolation
                     , optparse-applicative
                     , serokell-util
                     , tabl
                     , text
                     , universum >= 0.1.11
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts
                       -Wall
                       -O2

  -- linker speed up for linux
  if os(linux)
    ghc-options:       -optl-fuse-ld=gold
    ld-options:        -fuse-ld=gold

  default-extensions:   NoImplicitPrelude
                        OverloadedStrings
                        TypeApplications
                        ScopedTypeVariables
                        FlexibleContexts
                        MonadFailDesugaring

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp

  if flag(for-installer)
    buildable: False

executable seal-x509-certificates
  hs-source-dirs: src/gencerts
  main-is: Main.hs

  build-depends: base >=4.7 && <5
               , seal-x509
               , filepath
               , optparse-applicative
               , universum

  default-extensions:   DeriveGeneric
                        NoImplicitPrelude
                        OverloadedStrings
                        TupleSections
                        TypeApplications

  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts
                       -Wall
                       -O2

executable genesis-hash
  hs-source-dirs:      src/genesis-hash
  main-is:             Main.hs
  if !flag(for-installer)
   build-depends:      base
                     , universum
                     , bytestring
                     , cryptonite
                     , canonical-json
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts
                       -Wall
                       -O2

  -- linker speed up for linux
  if os(linux)
    ghc-options:       -optl-fuse-ld=gold
    ld-options:        -fuse-ld=gold

  if flag(for-installer)
    buildable: False
  else
    buildable: True
