name:                seal-binary-test
version:             1.0.0
synopsis:            Seal - binary serializarion (tests)
description:         This package contains test helpers for seal-binary.
license:             MIT
license-file:        LICENSE
category:            Currency
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
                       Test.Seal.Binary.Helpers
                       Test.Seal.Binary.Helpers.GoldenRoundTrip
                       Test.Seal.Cbor.Canonicity
                       Test.Seal.Cbor.RefImpl

  build-depends:       QuickCheck
                     , base
                     , bytestring
                     , seal-binary
                     , seal-util-test
                     , cborg
                     , cereal
                     , containers
                     , cryptonite
                     , formatting
                     , half
                     , hedgehog
                     , hspec
                     , mtl
                     , pretty-show
                     , quickcheck-instances
                     , safecopy
                     , serokell-util
                     , text
                     , universum

  default-language:    Haskell2010

  default-extensions:  DeriveDataTypeable
                       DeriveGeneric
                       DeriveFunctor
                       DeriveFoldable
                       DeriveTraversable
                       GeneralizedNewtypeDeriving
                       StandaloneDeriving
                       FlexibleContexts
                       FlexibleInstances
                       MultiParamTypeClasses
                       FunctionalDependencies
                       DefaultSignatures
                       NoImplicitPrelude
                       OverloadedStrings
                       TypeApplications
                       TupleSections
                       ViewPatterns
                       LambdaCase
                       MultiWayIf
                       ConstraintKinds
                       UndecidableInstances
                       BangPatterns
                       TemplateHaskell
                       ScopedTypeVariables
                       MonadFailDesugaring
                       GADTs

  ghc-options:         -Wall
                       -O2

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp
