name:                seal-core-test
version:             1.0.0
synopsis:            Seal - core functionality (tests)
description:         QuickCheck Arbitrary instances for the Seal core
                     functionality.
license:             MIT
license-file:        LICENSE
category:            Currency
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
                       Test.Seal.Core.Bi
                       Test.Seal.Core.Chrono
                       Test.Seal.Core.Dummy
                       Test.Seal.Core.ExampleHelpers
                       Test.Seal.Core.Gen
                       Test.Seal.Core.Arbitrary
                       Test.Seal.Core.Arbitrary.Unsafe
                       Test.Seal.Core.Arbitrary.Slotting
                       Test.Seal.Core.Json
                       Test.Seal.Core.SafeCopy

  build-depends:       QuickCheck
                     , base
                     , bytestring
                     , sealchain-crypto
                     , seal-binary
                     , seal-binary-test
                     , seal-core
                     , seal-crypto
                     , seal-crypto-test
                     , seal-util
                     , seal-util-test
                     , containers
                     , cryptonite
                     , generic-arbitrary
                     , hedgehog
                     , mtl
                     , pvss
                     , quickcheck-instances
                     , random
                     , serokell-util
                     , text
                     , time-units
                     , universum
                     , unordered-containers

  default-language:    Haskell2010

  default-extensions:  DeriveDataTypeable
                       DeriveGeneric
                       DeriveFunctor
                       DeriveFoldable
                       DeriveTraversable
                       GeneralizedNewtypeDeriving
                       StandaloneDeriving
                       FlexibleContexts
                       FlexibleInstances
                       MultiParamTypeClasses
                       FunctionalDependencies
                       DefaultSignatures
                       NoImplicitPrelude
                       OverloadedStrings
                       TypeApplications
                       TupleSections
                       ViewPatterns
                       LambdaCase
                       MultiWayIf
                       ConstraintKinds
                       UndecidableInstances
                       BangPatterns
                       TemplateHaskell
                       ScopedTypeVariables
                       MonadFailDesugaring
                       GADTs

  ghc-options:
                       -O2
                       -Wall
