name:                seal-crypto-test
version:             1.0.0
synopsis:            Seal - arbitrary instances for seal-crypto
description:         This package contains arbitrary instances for the cryptography primitives used in Seal.
license:             MIT
license-file:        LICENSE
category:            Currency
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
                       Test.Seal.Crypto.Arbitrary
                       Test.Seal.Crypto.Bi
                       Test.Seal.Crypto.Dummy
                       Test.Seal.Crypto.Example
                       Test.Seal.Crypto.Gen
                       Test.Seal.Crypto.Json

  other-modules:
                       Test.Seal.Crypto.Arbitrary.Unsafe


  build-depends:       QuickCheck
                     , base
                     , bytestring
                     , sealchain-crypto
                     , seal-binary
                     , seal-binary-test
                     , seal-crypto
                     , seal-util
                     , seal-util-test
                     , cryptonite
                     , generic-arbitrary
                     , hedgehog
                     , memory
                     , quickcheck-instances
                     , universum

  default-language:    Haskell2010

  default-extensions:  DeriveDataTypeable
                       DeriveGeneric
                       GeneralizedNewtypeDeriving
                       StandaloneDeriving
                       FlexibleContexts
                       FlexibleInstances
                       MultiParamTypeClasses
                       FunctionalDependencies
                       DefaultSignatures
                       NoImplicitPrelude
                       OverloadedStrings
                       TypeApplications
                       TupleSections
                       ViewPatterns
                       LambdaCase
                       MultiWayIf
                       ConstraintKinds
                       UndecidableInstances
                       BangPatterns
                       TemplateHaskell
                       ScopedTypeVariables
                       MonadFailDesugaring

  ghc-options:         -Wall
                       -O2
